[project]
name = "Reliable-Subtensor"
version = "0.1.0"
description = "Monitoring Local Subtensor"
authors = [
    {name = "venus", email = "venus1004@proton.me"},
]
dependencies = [
    "bittensor>=8.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
